--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medisure-pharma",
+  "name": "HelperHub",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://localhost:3000",
@@ -29,10 +29,13 @@
     "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^4.11.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.12.0",
+    "react-phone-input-2": "^2.15.1",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
