seller page added with uploading

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-# REACT_APP_API_URL=https://api.medisurepharmabd.com
 REACT_APP_API_URL=http://localhost:9000
-
+# REACT_APP_API_URL=https://ecom-backend-iso4.onrender.com
 PUBLIC_URL=/
 
 
